--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "rollup-plugin-visualizer": "^5.8.3",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.2.2",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
